20240813 블로그 글 수정

--- a/blog/[20240813]_[프론트엔드 날개달기]_[java]_[]_[인프런 강의 정리]_[].md
+++ b/blog/[20240813]_[프론트엔드 날개달기]_[java]_[]_[인프런 강의 정리]_[].md
@@ -2,6 +2,10 @@
 
 * 자바스크립트: 웹문서(html) 제어하기 위해 탄생
 * 제어법: 브라우저 안에 웹문서 해석할 수 있는 '렌더링 엔진' 존재
-* 즉, 한 줄씩 해석 -> 모두 해석하면 문서를 객체화 (문서 객체 모델: Document Object Model) -> 자바스크립트로 접근 가능
+* 즉, 한 줄씩 해석 -> 모두 해석하면 문서를 객체화 -> 자바스크립트로 접근 가능
+* 문서 객체 모델 (Document Object Model): 브라우저에서 자바스크립트로 html 요소를 제어하는 api
+* api: 언어 X, 기능 O 
 * 구조: Tree (document (html (head (meta, title), body (h1, p, div)))) 
 * Node: Tree 안의 각각의 요소
+* 브라우저 객체 모델 (Browser Object Model): 브라우저 자체 제어
+* CSS Object Model: 자바스크립트로 CSS 조작 가능
