--- a/blog/[20240813]_[프론트엔드 날개달기]_[java]_[]_[인프런 강의 정리]_[].md
+++ b/blog/[20240813]_[프론트엔드 날개달기]_[java]_[]_[인프런 강의 정리]_[].md
@@ -1,7 +1,7 @@
 # Vue, React 배우기 전에 꼭 알아야하는 지식 
 
 # DOM이란?
-* 자바스크립트: 웹문서(html) 제어하기 위해 탄생
+* 자바스크립트: 웹문서(html) 제어
 * 제어법: 브라우저 안에 웹문서 해석할 수 있는 '렌더링 엔진' 존재
 * 즉, 한 줄씩 해석 -> 모두 해석하면 문서를 객체화 -> 자바스크립트로 접근 가능
 * 문서 객체 모델 (Document Object Model): 브라우저에서 자바스크립트로 html 요소를 제어하는 api
